--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~10.0.11",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
+    "leaflet": "1.5.1",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
